Db et back onboard ok

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,10 @@
+#PORT=5001
+#DATABASE_URL=postgres://aymericsaves:evaneos@localhost:5432/evaneos_family
+
+
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=evaneos_family
+DB_PASSWORD=evaneos
+DB_PORT=5432
 PORT=5001
-DATABASE_URL=postgres://aymericsaves:evaneos@localhost:5432/evaneos_family
