--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.38",
-    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
@@ -33,7 +32,10 @@
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "sharp": "^0.33.5",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
