--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -22,10 +22,12 @@
     "expo-application": "~5.8.4",
     "expo-device": "~5.9.4",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
