--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "expo-linear-gradient": "^14.0.2",
-    "react-native-paper": "^5.13.1"
+    "react-native-paper": "^5.13.1",
+    "uuid": "^11.1.0"
   }
 }
