--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.9.1",
     "morgan": "^1.10.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
