--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.3.2",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
     "expo-linear-gradient": "^14.0.2",
+    "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.13.1",
     "uuid": "^11.1.0"
   }
