--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -28,10 +28,12 @@
     "react-native": "0.73.4",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-maps": "1.10.0"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
