--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.13.1",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   }
 }
