--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -1,45 +1,36 @@
 {
-  "name": "mobile-app",
+  "name": "evaneos-family-app",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@types/uuid": "^10.0.0",
-    "axios": "^1.6.7",
-    "expo": "~50.0.6",
-    "expo-application": "~5.8.4",
-    "expo-device": "~5.9.4",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/stack": "^6.0.0",
+    "expo": "~50.0.0",
+    "expo-file-system": "~16.0.0",
     "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo-sharing": "~11.10.0",
+    "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
-    "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "sharp": "^0.33.5",
-    "typescript": "^5.3.0"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
