--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -11,17 +11,32 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.0.0",
-    "@react-navigation/stack": "^6.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "~50.0.0",
+    "expo-device": "^7.0.3",
     "expo-file-system": "~16.0.0",
+    "expo-haptics": "^14.0.1",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-location": "~16.5.5",
     "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.10.0",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
